# ACE_GPR

./: .gitignore  README.md  pyproject.toml  requirements.txt
ace_gpr/: ase_extractor.py  calculator.py  dataset.py  gpr.py  plot.py  train.py
modules/: ase_extractor.py  dataset.py  gpr.py  plot.py  train.py
